# spellcheck

./: .gitignore  README.md  spellcheck.cabal  words
app/: Main.hs
src/Text/: Spellcheck.hs
