name:                spellcheck
version:             0.1.0
synopsis:            A simple, interactive spell checker.
description:         Please see README.md
homepage:            https://github.com/JustusAdam/spellcheck#readme
license:             BSD3
license-file:        LICENSE
author:              JustusAdam
maintainer:          dev@justus.science
copyright:           Copyright: (c) 2016 Justus Adam
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Spellcheck
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , text
                     , unordered-containers
                     , classy-prelude
  default-language:    Haskell2010

executable spellcheck-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , spellcheck
                     , template-haskell
                     , classy-prelude
                     , text
                     , unordered-containers
  default-language:    Haskell2010

test-suite spellcheck-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , spellcheck
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JustusAdam/spellcheck
